[gd_scene load_steps=8 format=3 uid="uid://r7ntx6orfvyd"]

[ext_resource type="Script" path="res://Scenes/Level Assets/disappearing_tilesV2.gd" id="1_70r84"]
[ext_resource type="Texture2D" uid="uid://d6uhndfptwhy" path="res://Assets/cloud.png" id="2_18nos"]
[ext_resource type="Texture2D" uid="uid://bd2re6er0tdm8" path="res://Assets/cloud_outline.png" id="3_s88ta"]

[sub_resource type="Animation" id="Animation_dpww7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outline:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionArea/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActivatorArea/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2pqx8"]
resource_name = "disappear"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outline:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.9, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionArea/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActivatorArea/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_w8t01"]
resource_name = "disappear_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Outline:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionArea/CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ActivatorArea/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pt2t"]
_data = {
"RESET": SubResource("Animation_dpww7"),
"disappear": SubResource("Animation_2pqx8"),
"disappear_2": SubResource("Animation_w8t01")
}

[node name="DisappearingTiles" type="Node2D" groups=["disappearing_tiles"]]
position = Vector2(96, 70)
script = ExtResource("1_70r84")
metadata/_edit_group_ = true

[node name="Sprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -8)
texture = ExtResource("2_18nos")

[node name="Outline" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(8, -8)
texture = ExtResource("3_s88ta")

[node name="CollisionArea" type="StaticBody2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PackedVector2Array(0, -2, 0, -16, 16, -16, 16, -1, 11, -1, 11, -2, 8, -2, 8, -3, 7, -3, 7, -4, 6, -4, 6, -5, 4, -5, 4, -4, 3, -4, 3, -3, 2, -3, 2, -2)

[node name="ActivatorArea" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ActivatorArea"]
visible = false
position = Vector2(-9.53674e-07, -0.218748)
scale = Vector2(1, 1.0625)
polygon = PackedVector2Array(0, -2, 0, -16, 16, -16, 16, -1, 11, -1, 11, -2, 8, -2, 8, -3, 7, -3, 7, -4, 6, -4, 6, -5, 4, -5, 4, -4, 3, -4, 3, -3, 2, -3, 2, -2)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5pt2t")
}

[node name="ReturnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="ActivatorArea" to="." method="_on_activator_area_body_entered"]
[connection signal="timeout" from="ReturnTimer" to="." method="_on_return_timer_timeout"]
